add some meta elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Makes it easy and simple to collapse wrapped elements with animation.">
   <title>&lt;animated-collapse&gt; element</title>
+  <link rel="canonical" href="/animated-collapse-element/">
   <style>
     :root {
       --color-blue-800: #1565C0;
