--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       This element is built with Web Components. It works only with browsers supporting Custom Elements and Shadow DOM.
     </p>
     <p>
-      <a href="https://github.com/yuheiy/animated-collapse-element">Fork me at GitHub</a>
+      <a href="https://github.com/yuheiy/animated-collapse-element">Fork me at GitHub</a>.
     </p>
   </header>
 
