--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ animatedCollapse.addEventListener(
   <footer>
     <address>
       <p>Made by
-        <a href="https://yuheiy.com/">Yuhei Yasuda</a>.</p>
+        <a href="https://yuheiy.com/" rel="author">Yuhei Yasuda</a>.</p>
     </address>
   </footer>
 </body>
