make focus ring color lighter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="canonical" href="/animated-collapse-element/">
   <style>
     :root {
-      --color-blue-800: #1565C0;
+      --color-blue-600: #1e88e5;
       --color-blue-900: #0d47a1;
       --color-gray-50: #fafafa;
       --color-gray-200: #eee;
@@ -23,7 +23,7 @@
       --easing-standard: cubic-bezier(0.4, 0, 0.2, 1);
 
       --focus-ring-width: 3px;
-      --focus-ring-color: var(--color-blue-800);
+      --focus-ring-color: var(--color-blue-600);
     }
 
     html {
