--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
       margin: 0;
       padding: .25rem 1.25rem;
       font: inherit;
-      box-shadow: 0 1px 1px 0 hsla(0, 0%, 0%, .2);
+      box-shadow: 0 0 0 0 transparent, 0 1px 1px 0 hsla(0, 0%, 0%, .2);
       background-color: var(--color-gray-200);
       border: 1px solid var(--color-gray-300);
       border-radius: 2px;
     }
 
     .collapsible-toggle:focus {
-      box-shadow: 0 1px 1px 0 transparent, 0 0 0 var(--focus-ring-width) var(--focus-ring-color);
+      box-shadow: 0 0 0 var(--focus-ring-width) var(--focus-ring-color), 0 1px 1px 0 hsla(0, 0%, 0%, .2);
       outline: 0;
       transition: box-shadow .2s var(--easing-standard);
     }
