describe about default values

--- a/index.html
+++ b/index.html
@@ -278,9 +278,16 @@
           <code>transition</code> property as Custom properties.</p>
         <pre><code class="language-css">animated-collapse {
   --animated-collapse-duration-expand: 1.6s;
+  /* default value: 0.25s */
+
   --animated-collapse-duration-collapse: .8s;
+  /* default value: 0.2s */
+
   --animated-collapse-easing-expand: cubic-bezier(0.860, 0.000, 0.070, 1.000);
+  /* default value: cubic-bezier(0.4, 0, 0.2, 1) */
+
   --animated-collapse-easing-collapse: cubic-bezier(0.075, 0.820, 0.165, 1.000);
+  /* default value: cubic-bezier(0.4, 0, 0.2, 1) */
 }</code></pre>
       </animated-collapse>
     </section>
