fix site heading

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <body>
   <header>
     <h1>
-      <code>&lt;animated-collapse&gt; element</code>
+      <code>&lt;animated-collapse&gt;</code> element
     </h1>
     <p>
       <code>&lt;animated-collapse&gt;</code> element makes it easy and simple to collapse wrapped elements with animation.
